--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
--i https://pypi.org/simple
-asgiref==3.9.1; python_version >= '3.9'
-django==5.2.4; python_version >= '3.10'
-django-jazzmin==3.0.1; python_version >= '3.8'
-gunicorn==23.0.0; python_version >= '3.7'
-mysqlclient==2.2.7; python_version >= '3.8'
-packaging==25.0; python_version >= '3.8'
-pillow==11.3.0; python_version >= '3.9'
-sqlparse==0.5.3; python_version >= '3.8'
-whitenoise==6.9.0; python_version >= '3.9'
+asgiref==3.9.1
+dj-database-url==3.0.1
+Django==5.2.4
+django-jazzmin==3.0.1
+gunicorn==23.0.0
+mysqlclient==2.2.7
+packaging==25.0
+pillow==11.3.0
+psycopg2-binary==2.9.10
+python-decouple==3.8
+sqlparse==0.5.3
+whitenoise==6.9.0
