--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ packaging==25.0
 pillow==11.3.0
 psycopg2-binary==2.9.10
 python-decouple==3.8
+python-dotenv==1.1.1
 sqlparse==0.5.3
 whitenoise==6.9.0
